# HSoM

./: HSoM.cabal  HSoM.lhs  License  README.md  new_code.txt  readme.txt
HSoM/: FFT.lhs  MUI.hs  MoreMusic.lhs  Performance.lhs
HSoM/Examples/: AMandFM.lhs  Additive.lhs  EuterpeaExamples.lhs  FFT.lhs  Interlude.lhs  IntervalTrainer.lhs  LSystems.lhs  MUIExamples1.lhs  MUIExamples2.lhs  MoreMusic.lhs  MusicToSignal.lhs  NewResolutions.lhs  PhysicalModeling.lhs  PhysicalModelling.lhs  RandomMusic.lhs  SSF.lhs  SelfSimilar.lhs  SoundCheck.lhs  SpectrumAnalysis.lhs
HSoM/Examples/broken/: Additive.lhs  Instruments.lhs  SpectrumAnalysis.lhs
HSoM/MUI/: FFT.lhs  MidiWidgets.lhs
